# deepseek-ocr

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
.claude/: settings.local.json
flows/pdf-to-markdown/: .flow.ui.oo.json  flow.oo.yaml
flows/test-llm-ocr/: .flow.ui.oo.json  flow.oo.yaml
flows/test-ocr/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/pdf-to-markdown-conversion/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/deepseek_ocr/: __init__.py  task.oo.yaml
tasks/llm-ocr/: __init__.py  task.oo.yaml
tasks/process-images-to-md/: __init__.py  task.oo.yaml
