[project]
name = "deepseek-ocr-1"
version = "0.1.0"
description = ""
authors = [
    {name = "alwaymavs",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "transformers==4.46.3",
    "tokenizers==0.20.3",
    "pillow (>=12.0.0,<13.0.0)",
    "torch (>=2.0.0)",
    "torchvision (>=0.15.0)",
    "addict (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "easydict (>=1.13,<2.0)",
    "einops (>=0.8.1,<0.9.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "deepseek_ocr_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
