[project]
name = "deepseek-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "shaun",email = "beingswu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openai (>=2.14.0,<3.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "deepseek_ocr", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
